<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:id="@+id/layout_scan_mode"
		android:layout_width="match_parent"
		android:layout_height="@dimen/preference_height"
		android:orientation="horizontal">

		<TextView
			android:text="@string/safety_scan_mode"
			android:textSize="@dimen/title_text_size_big"
			android:layout_weight="1"
			android:textColor="@color/text_title_color"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_marginLeft="@dimen/activity_horizontal_margin"
			android:gravity="left"/>

		<TextView
			android:id="@+id/tv_scan_mode"
			android:text="@string/safety_quick_scan_mode"
			android:textSize="@dimen/summary_text_size"
			android:layout_weight="1"
			android:textColor="@color/text_summary_color"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_marginRight="@dimen/activity_horizontal_margin"
			android:gravity="right"/>

	</LinearLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1px"
		android:background="@color/split_line_color"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/preference_height"
		android:orientation="horizontal">

		<TextView
			android:text="@string/safety_malicious_url_interception"
			android:textSize="@dimen/title_text_size_big"
			android:layout_weight="1"
			android:textColor="@color/text_title_color"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_marginLeft="@dimen/activity_horizontal_margin"
			android:gravity="left"/>

		<hb.widget.Switch
			android:id="@+id/switch_url_monitor"
			android:layout_weight="1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_marginRight="@dimen/activity_horizontal_margin"
			android:gravity="right"/>

	</LinearLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1px"
		android:background="@color/split_line_color"/>
</LinearLayout>