<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hb="http://schemas.android.com/apk/res/com.hb"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/rb_listLayout"
        android:layout_width="wrap_content" android:layout_above="@+id/bv"
        android:layout_height="wrap_content" android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <ExpandableListView
            android:id="@+id/rubblishList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:childDivider="@color/item_line_color"
            android:dividerHeight="1px"
            android:gravity="center"
            android:listSelector="#00000000"
            android:scrollbars="none" >
        </ExpandableListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rb_main_null"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rb_listLayout"
        android:layout_gravity="center"  
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/rb_app_null_imageview"
            android:layout_width="130dp"
            android:layout_height="130dip"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@drawable/bg_app_null" />

        <TextView
            android:id="@+id/rb_app_null_text"
            android:layout_width="fill_parent"
             android:layout_height="24dp" android:layout_marginTop="12dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/rubblish_null_message"
            android:textColor="#FFE0E0E0"
            android:textSize="@dimen/small_text_size" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/progressLin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rb_main_null" android:layout_centerInParent="true"
        android:layout_gravity="center" android:visibility="gone"
        android:orientation="vertical" >

        <ProgressBar  android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

            <TextView
            android:id="@+id/loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:paddingTop="4dip"
            android:requiresFadingEdge="horizontal"
            android:layout_gravity="center" android:text="@string/progress_dialog_loading"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bv"
        android:layout_width="fill_parent"
        android:layout_height="74dp" 
        android:layout_alignParentBottom="true"
        android:gravity="center" >

        <Button
            android:id="@+id/rubblishCleanBtn"
            android:layout_width="180dip"
            android:layout_height="40dip"
            android:background="@drawable/clean_button_selector"
            android:gravity="center"
            android:text="@string/clean_btn_message"
            android:textColor="@color/white" android:foreground="#00000000"
            android:textSize="16.0dp" >
        </Button>
    </LinearLayout>

</RelativeLayout>