<?xml version="1.0" encoding="utf-8"?>
<!--
/* //device/apps/common/assets/res/layout/list_content.xml
**
** Copyright 2006, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.
*/
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hb="http://schemas.android.com/apk/res/com.hb"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/bg_app_num_layout" android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="28dp"
        android:layout_alignParentTop="true"
        android:background="#FFF4F4F4"
        android:gravity="center" >

        <TextView
            android:id="@+id/bg_app_num"
            android:layout_width="fill_parent"
            android:layout_height="28dp"
            android:layout_marginStart="5dip"
            android:layout_marginTop="5.0dip"
            android:textColor="#8A000000"
            android:textSize="@dimen/item_number_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bg_listLayout" android:layout_marginBottom="74dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/bg_app_num_layout" >

        <hb.widget.HbListView
            android:id="@android:id/list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bg_main_null"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bg_listLayout"
        android:layout_gravity="center"  
        android:layout_marginTop="90dp" 
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/bg_app_null_imageview"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@drawable/bg_app_null" />

        <TextView
            android:id="@+id/bg_app_null_text"
            android:layout_width="fill_parent"
            android:layout_height="24dp" android:layout_marginTop="12dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/running_app_null_message"
            android:textColor="#FFE0E0E0"
            android:textSize="@dimen/small_text_size" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bgprogressLin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bg_main_null" android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:orientation="vertical" >

        <ProgressBar  android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

            <TextView
            android:id="@+id/loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:paddingTop="4dip"
            android:requiresFadingEdge="horizontal"
            android:layout_gravity="center" android:text="@string/progress_dialog_loading"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent" android:id="@+id/bottomLin"
        android:layout_height="74dp"
        android:layout_alignParentBottom="true" 
        android:gravity="center" >

        <Button
            android:id="@+id/forceStopBtn"
            android:layout_width="180dip"  android:visibility="gone"
            android:layout_height="40dip"
            android:background="@drawable/clean_button_selector" style="?android:attr/borderlessButtonStyle"
            android:gravity="center"
            android:text="@string/one_key_optimize" android:foreground="#00000000"
            android:textColor="@color/white"
            android:textSize="16.0dp" >
        </Button>
    </LinearLayout>

</RelativeLayout>